# destina

./: CMakeLists.txt  README.md  swig_destina_common.i  update-all.sh
Python/: CMakeLists.txt  swig_destina_python.i
include/: SA.h  destin_network.h  destina_lib.h  destina_sys_lib.h  ifsc.h  pre_proc.h  proc_tools.h
src/: cifar_test.cpp  classify_test.cpp  gabor_test.cpp  ifsc_test.cpp  network_test.cpp  sa.cpp  whitening_test.cpp
